--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+#ollelelelelelelelelelelelelelelel leee doo leee doo lee doo lee do leee do
 # Auto detect text files and perform LF normalization
 * text=auto
 
